--- a/conference/NetDevConf2025-0x19/mq-cake-paper/isea.tex
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/isea.tex
@@ -6,7 +6,7 @@
 \usepackage{times}
 \usepackage{helvet}
 \usepackage{courier}
-\usepackage[numbers]{natbib}
+\usepackage[numbers,sort]{natbib}
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
@@ -14,7 +14,6 @@
 \usepackage{subcaption}
 \usepackage{listings}
 \usepackage{url}
-
 \pdfinfo{
 /Title (mq-cake: Scaling software rate limiting across CPU cores)  
 /Author (Jonas Köppeler, Toke H\o{}iland-J\o{}rgensen, Stefan Schmid)}
