--- a/conference/NetDevConf2025-0x19/mq-cake-paper/introduction.tex
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/introduction.tex
@@ -5,9 +5,9 @@ Software rate limiting is a critical technique for ensuring optimal network perf
 As line rates continue to increase and surpass CPU speeds, implementing efficient rate limiting becomes increasingly challenging. This is particularly evident in the Linux kernel, where access to queueing disciplines is synchronized through the global qdisc lock, leading to potential contention issues.
 To illustrate this issue, in our experiments with a 25G NIC, sch\_cake and sch\_htb were only able to enforce a global rate limit of up to 8--11 Gbps. The performance even decreased with an increasing number of transmission queues.
 
-To address these challenges, prior work has focused on overcoming lock contentions and improving the scalability of software rate limiters~\cite{eyeq}~\cite{carousel}~\cite{edt-ebpf}. One of the most effective solutions is the EDT-eBPF (or BPF-FQ?) approach, presented at Netdevconf 0x14 by~\citeauthor{edt-ebpf}~\cite{edt-ebpf}, which completely eliminates lock contention. This method leverages an eBPF program to timestamp packets with departure times before forwarding them to the FQ qdisc.
+To address these challenges, prior work has focused on overcoming lock contentions and improving the scalability of software rate limiters~\cite{eyeq, carousel, edt-ebpf}. One of the most effective solutions is the EDT-eBPF approach, presented at Netdevconf 0x14 by~\citeauthor{edt-ebpf}~\cite{edt-ebpf}, which completely eliminates lock contention. This method leverages an eBPF program to timestamp packets with departure times before forwarding them to the FQ qdisc.
 
-However, the EDT model relies on a backpressure mechanism to prevent excessive packet queueing in the network stack~\cite{carousel}. The absence of proper backpressure can lead to performance issues, as observed in the Cilium bandwidth manager, where it caused spikes in network latency~\cite{edt-issue}~\cite{fifo-in-the-cloud}. While backpressure can be enforced on end-hosts --- the primary target of the EDT-eBPF approach --- it represents only a subset of rate-limiting applications.
+However, the EDT model relies on a backpressure mechanism to prevent excessive packet queueing in the network stack~\cite{carousel}. The absence of proper backpressure can lead to performance issues, as observed in the Cilium bandwidth manager, where it caused spikes in network latency~\cite{edt-issue, fifo-in-the-cloud}. While backpressure can be enforced on end-hosts --- the primary target of the EDT-eBPF approach --- it represents only a subset of rate-limiting applications.
 
 In scenarios where direct control over end-hosts is unavailable, such as rate limiting on routers or switches, backpressure mechanisms are not feasible. This limitation is particularly relevant for enforcing data plans in ISPs or managing traffic on home routers.
 
